--- a/EstagiA/app/src/main/res/layout/activity_main.xml
+++ b/EstagiA/app/src/main/res/layout/activity_main.xml
@@ -37,10 +37,18 @@
         android:layout_height="wrap_content"
         android:hint="@string/password_label"
         android:lines="1"
-        android:layout_marginBottom="22dp"
         android:textSize="15sp"
         android:ellipsize="start"
         android:gravity="center_horizontal"/>
+    <TextView
+        android:id="@+id/txtRecoverPassword"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="22dp"
+        android:gravity="center"
+        android:text="@string/forgot_password_label"
+        android:textColor="@color/colorPrimary"
+        android:textSize="12sp"/>
 
     <Button
         android:id="@+id/btnLogin"
