--- a/EstagiA/app/src/main/res/layout/activity_dashboard.xml
+++ b/EstagiA/app/src/main/res/layout/activity_dashboard.xml
@@ -5,4 +5,9 @@
     android:gravity="center"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="140dp"
+        android:src="@drawable/logo_estagia" />
+
 </LinearLayout>
