--- a/EstagiA/app/src/main/res/layout/activity_main.xml
+++ b/EstagiA/app/src/main/res/layout/activity_main.xml
@@ -36,6 +36,7 @@
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:hint="@string/password_label"
+        android:inputType="textPassword"
         android:lines="1"
         android:textSize="15sp"
         android:ellipsize="start"
