--- a/EstagiA/app/src/main/res/layout/activity_my_profile.xml
+++ b/EstagiA/app/src/main/res/layout/activity_my_profile.xml
@@ -56,6 +56,7 @@
         android:layout_width="fill_parent"
         android:layout_height="40dp"
         android:hint="@string/password_label"
+        android:inputType="textPassword"
         android:lines="1"
         android:textSize="15sp"
         android:ellipsize="start"
