Editar perfil, recuperar senha e cadastro

--- a/EstagiA/app/src/main/res/layout/activity_my_profile.xml
+++ b/EstagiA/app/src/main/res/layout/activity_my_profile.xml
@@ -13,10 +13,9 @@
     <TextView
         android:id="@+id/myProfileLabel"
         android:layout_width="fill_parent"
-        android:layout_height="50dp"
+        android:layout_height="80dp"
         android:text="Meu perfil"
         android:gravity="center"
-        android:layout_marginBottom="5dp"
         android:textSize="25sp"/>
     <TextView
         android:id="@+id/profileInfoLabel"
@@ -31,7 +30,9 @@
         android:layout_width="fill_parent"
         android:layout_height="40dp"
         android:hint="@string/name_label"
+        android:textColor="#8e8e8e"
         android:lines="1"
+        android:editable="false"
         android:textSize="15sp"
         android:layout_below="@id/profileInfoLabel"/>
     <EditText
@@ -39,6 +40,8 @@
         android:layout_width="fill_parent"
         android:layout_height="40dp"
         android:hint="@string/ra_label"
+        android:textColor="#8e8e8e"
+        android:editable="false"
         android:lines="1"
         android:textSize="15sp"
         android:layout_below="@id/txtNome"/>
@@ -75,14 +78,23 @@
             android:layout_marginRight="50dp"
             android:layout_height="wrap_content"
             android:text="@string/bcc_radio"
-            android:checked="true"
-            android:onClick="onRadioButtonClicked"/>
+            android:checked="true"/>
         <RadioButton android:id="@+id/radio_enc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/enc_radio"
-            android:onClick="onRadioButtonClicked"/>
+            android:text="@string/enc_radio"/>
     </RadioGroup>
+    <Button
+        android:id="@+id/btnEditarPerfil"
+        android:textColor="#FFFFFF"
+        android:textSize="20sp"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Salvar"
+        android:background="@drawable/button_shape"
+        android:layout_marginTop="15dp"
+        android:layout_below="@id/radio_major"
+        android:gravity="center"/>
 
     <TextView
         android:id="@+id/txtOpportunities"
@@ -90,7 +102,7 @@
         android:layout_height="40dp"
         android:gravity="center"
         android:layout_marginTop="30dp"
-        android:layout_below="@id/radio_major"
+        android:layout_below="@id/btnEditarPerfil"
         android:text="@string/opportunities_label"/>
     <ImageView
         android:id="@+id/imgGoogle"
