--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -12,31 +12,62 @@
             android:paddingRight="30dp"
             android:paddingTop="30dp">
             <ImageView
-                android:id="@+id/imgSpotify"
+                android:id="@+id/imgEvent"
                 android:layout_width="fill_parent"
                 android:layout_height="130dp"
                 android:src="@drawable/logo_spotify" />
             <TextView
-                android:id="@+id/txtSpotify"
+                android:id="@+id/eventTitle"
                 android:layout_width="fill_parent"
                 android:layout_height="45dp"
                 android:gravity="center"
                 android:textSize="20sp"
-                android:layout_below="@id/imgSpotify"
+                android:layout_below="@id/imgEvent"
                 android:text="Spotify"/>
+            <LinearLayout
+                android:id="@+id/linearLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_below="@id/eventTitle"
+
+                >
+                <TextView
+                    android:id="@+id/eventDate"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:ellipsize="end"
+                    android:gravity="right"
+                    android:textSize="13sp"
+                    android:maxLines="1"
+                    android:text="DD/MM/AAAA " />
+
+                <TextView
+                    android:id="@+id/eventPlace"
+                    android:layout_width="95sp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="left"
+                    android:textSize="13sp"
+                    android:ellipsize="end"
+                    android:maxLines="2"
+                    android:text=" Auditório 1 - Departamento de Computação" />
+            </LinearLayout>
+
             <TextView
-                android:id="@+id/txtSpotifyInfo"
+                android:id="@+id/eventBody"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-                android:layout_below="@id/txtSpotify"
-                android:text="@string/spotify_info"
+                android:layout_below="@id/linearLayout"
+                android:text="event body"
                 android:layout_marginTop="10dp"/>
             <Button
                 android:id="@+id/btnCadastrar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/txtSpotifyInfo"
+                android:layout_below="@id/eventBody"
                 android:layout_marginTop="20dp"
                 android:layout_alignParentRight="true"
                 android:text="Inscrever" />
