--- a/app/src/main/res/layout/activity_opportunity.xml
+++ b/app/src/main/res/layout/activity_opportunity.xml
@@ -12,31 +12,31 @@
             android:paddingRight="30dp"
             android:paddingTop="30dp">
             <ImageView
-                android:id="@+id/imgGoogle"
+                android:id="@+id/imgView"
                 android:layout_width="fill_parent"
                 android:layout_height="140dp"
                 android:src="@drawable/logo_google" />
             <TextView
-                android:id="@+id/txtGoogle"
+                android:id="@+id/txtTitle"
                 android:layout_width="fill_parent"
                 android:layout_height="45dp"
                 android:gravity="center"
                 android:textSize="20sp"
-                android:layout_below="@id/imgGoogle"
-                android:text="Google"/>
+                android:layout_below="@id/imgView"
+                android:text="Titulo"/>
             <TextView
-                android:id="@+id/txtGoogleInfo"
+                android:id="@+id/txtBody"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
-                android:layout_below="@id/txtGoogle"
-                android:text="@string/google_info"
+                android:layout_below="@id/txtTitle"
+                android:text="@string/spotify_info"
                 android:layout_marginTop="10dp"/>
             <Button
-                android:id="@+id/btnCadastrar"
+                android:id="@+id/btnRegister"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/txtGoogleInfo"
+                android:layout_below="@id/txtBody"
                 android:layout_marginTop="20dp"
                 android:layout_alignParentRight="true"
                 android:text="Inscrever" />
